[ somewhen in the future ]

        0.38 release.

        Internal

        - Update Botan to 1.7.2.



Fri Oct 25 22:35:33 UTC 2007

        0.37 release.

        Changes

        - mtn db kill_rev_locally now checks for an existing workspace
          before the revision is killed and tries to apply the changes
          of this particular revision back to the workspace to allow
          easy re-committing afterwards

        - the "--brief" switch for mtn annotate has been renamed to
          "--revs-only" for clarity

        - mtn help now lists the commands (and their aliases) available
          within a group, so its easier to get an overview which commands
          are available at all

        - the "MTN_MERGE=diffutils" merger (provided by std_hooks.lua)
          was improved. It now accepts a MTN_MERGE_DIFFUTILS environment
          variable which can be used to control its behaviour
          through comma-separated "key[=value]" entries. Currently
          supported entries are "partial" for doing a partial
          batch/non-modal 3-way merge conflict "resolution" which uses
          embedded content conflict markers and "diff3opts=[...]" and
          "sdiffopts=[...]" for passing arbitrary options to the used
          "diff3" and "sdiff" tools. When used in combination with "mtn
          merge_into_workspace" this way one especially can achieve a
          CVS/SVN style non-modal workspace-based merging.

        - There is a new revision selector: "p:REV" selects the
          parent(s) of revision REV.  For example, if a revision has
          one parent,

             mtn diff -r p:REV -r REV

          will show the changes made in that revision.

        - Monotone now uses the Perl-Compatible Regular Expression
          (PCRE) library for all regular expressions, instead of the
          boost::regex library.  This means that external Boost
          libraries are no longer required to build or use Monotone.