@@ -2,6 +2,12 @@
 
         0.38 release.
 
+        Changes
+
+        - Added the scripts of the following Lua-based contributed
+          Monotone extension commands to contrib/command/:
+          "mtn base", "mtn fuse", "mtn revision", "mtn conflicts".
+
         Internal
 
         - Update Botan to 1.7.2.
